--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-inverse" role="navigation" style="background-color: #0d3752;
 background-image: none;
+  height:5%;
   border-radius: 0px;
   border-width: 0;
   margin-bottom:0">
