1)bug fixed if no yelp atttraction for particular park;2)activity function release;3)UI optimization;4)map language

--- a/views/park.ejs
+++ b/views/park.ejs
@@ -288,7 +288,7 @@
 					});
 				}
 				</script>
-				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7fykw9VXKzdINOG_he5NmWMu6ArIgXuE&callback=initMap&libraries=geometry"
+				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDikfTOXeaw7tQ65UFLmB-_eqV_AfqCAO4&callback=initMap&language=en"
 		  async defer></script>
 			</div>
 		</div>
