--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,16 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
 		<style>
 		#index_bng{
+			top:90px;
+			position: relative;
 			width: 100%;
-			height: 90%;
+			height: -moz-calc(100% - 90px);
+			/* WebKit */
+			height: -webkit-calc(100% - 90px);
+			/* Opera */
+			height: -o-calc(100% - 90px);
+			/* Standard */
+			height: calc(100% - 90px);
 			background: url('../img/zion_as_index.jpg') center center fixed;
 			background-size: cover;
 			display: block;
@@ -20,7 +28,7 @@
 		#search{
 			width:50%;
 			height:180px;
-			top:460px;
+			top:400px;
 			left:25%;
 			background-color: rgba(128,128,128,0.5);
 			position: relative;
@@ -30,9 +38,9 @@
 			margin-top: 0;
 			font-family: 'Slabo 27px', serif;
 			color:white;
-			top:400px;
+			top:350px;
 			font-size: 80px;
-			position: absolute;
+			position: relative;
 			width:100%;
 			text-shadow: 3px 3px #000000
 		}
@@ -58,7 +66,7 @@
 						<select name="activity" class="form-control" style="right:150px;position: relative;float: right;">
 							<option selected="selected" value="">--By activity--</option>
 							<% for(var i = 0;i<activities.length;i++){%>
-								<option value=<%= activities[i].activity_id%>><%= activities[i].activity_name%></option>
+								<option value=<%= encodeURI(activities[i].activity_name)%>><%= activities[i].activity_name%></option>
 							<% } %>
 						</select>
 						<input class="btn btn-info" style="width:200px;height:40px;top: 50px;position: relative;" type="submit" value="Search">
