--- a/views/park.ejs
+++ b/views/park.ejs
@@ -199,7 +199,7 @@
 			<h3 style="float: left;left:300px;position: relative;" onmouseover="r_over()">Restaurant</h3>
 			<h3 style="float: right;right:300px;position: relative;"" onmouseover="b_over()">Bar</h3>
 			<table style="width:100%;border-collapse: initial;margin-bottom:150px" align="center" id="restaurant">
-			<% for(var i = 0;i<5;i++){%>
+			<% for(var i = 0;i<restaurant_url.length;i++){%>
 				<tr style="height:120px">
 					<td style="width:10%"><%= i+1%></td>
 					<td style="width:15%"><img src="<%= restaurant_url[i]%>" style="border-radius: 5px"></td>
@@ -210,7 +210,7 @@
 			<% } %>
 			</table>
 			<table style="width:100%;border-collapse: initial;margin-bottom:150px" align="center" id="bar">
-			<% for(var i = 0;i<5;i++){%>
+			<% for(var i = 0;i<bar_url.length;i++){%>
 				<tr style="height:120px">
 					<td style="width:10%"><%= i+1%></td>
 					<td style="width:15%"><img src="<%= bar_url[i]%>" style="height:100px;border-radius: 5px"></td>
