--- a/views/search_index.ejs
+++ b/views/search_index.ejs
@@ -57,7 +57,7 @@
 			top:0;
 			bottom:0;
 			left:0;
-			margin-left:130px;
+			margin-left:100px;
 			text-align: center;
 			height: 133px;
 			width: 133px;
@@ -70,7 +70,7 @@
 		{
 			opacity: 1;
 			display: block;
-			margin-left:130px;
+			margin-left:100px;
 			text-align: center;
 			height: 133px;
 			width: 133px;
@@ -171,9 +171,9 @@
 				    bounds.extend(pos);
 				    var result_table = document.getElementById('result_table');
 				    var table_text = '';
-				    table_text += '<tr style="vertical-align: middle"><td class="index">'+count+'</td><td><div style="position:relative"><img src="'+image_url[i]+'" style="border-radius:50%;height:133px;width:133px;margin-left:100px" id="img"><input type="checkbox" name="thing" value="valuable" id="thing'+i+'"/><label for="thing'+i+'" id="label'+i+'"></label></div></td><td class="name">'+park_names[i]+'</td><td>';
+				    table_text += '<tr style="vertical-align: middle"><td class="index">'+count+'</td><td><div style="position:relative" align="left"><img src="'+image_url[i]+'" style="border-radius:50%;height:133px;width:133px;margin-left:100px" id="img"><input type="checkbox" name="thing" value="valuable" id="thing'+i+'"/><label for="thing'+i+'" id="label'+i+'"></label></div></td><td class="name">'+park_names[i]+'</td><td>';
 				    for(var j = 0;j<park_activities_code[i].length;j++){
-				    	if(park_activities_code[i][j]<100||park_activities_code[i][j]!=24)
+				    	if(park_activities_code[i][j]<100&&park_activities_code[i][j]!=24)
 						    table_text += '<img src="https://www.recreation.gov/images/activities/icon_actv_'+park_activities_code[i][j].toString()+'.png"></img>';
 						else
 							table_text += '<img src="https://www.recreation.gov/images/activities/icon_blank.png"></img>';
